# DataScienceAgent

./: pyproject.toml  sqlite notebook.ipynb
data_scout/: analysis_engine.py  chart_builder.py  csv_loader.py  data_cleaner.py  dataset_inspector.py  feature_engineer.py  hypothesis_tester.py  model_trainer.py  serialization.py  statistics_analyzer.py  utils.py
data_scout/analysis/: acquisition.py
data_scout/interface/: streamlit_ui.py
data_scout/vector_databases/: pinecone_intro.py
