[project]
name = "datascientagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pinecone>=9.1.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.2",
    "tavily>=1.1.0",
]
